Sec17_Chap172-XXX-NOK: test code optimization